code/kubernetes/msa-front/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-front
  namespace: cowing-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-front
  template:
    metadata:
      labels:
        app: msa-front
    spec:
      containers:
      - name: msa-front
        image: ghcr.io/coinwing/cowing-msa-front
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 1024Mi
            cpu: 1000m
      imagePullSecrets:
        - name: ghcr-login-secret
