code/kubernetes/msa-front/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-front
  namespace: cowing-prod
spec:
  selector:
    app: msa-front
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
